--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ jobs:
       with:
         fetch-depth: 0
     - uses: coursier/cache-action@v6.3
-    - uses: coursier/setup-action@v1.2.0-M3
-      with:
-        jvm: temurin:17
+    - uses: VirtusLab/scala-cli-setup@v0.1
     - name: Test
       run: ./scala-cli test . --cross
 
@@ -30,9 +28,7 @@ jobs:
       with:
         fetch-depth: 0
     - uses: coursier/cache-action@v6.3
-    - uses: coursier/setup-action@v1.2.0-M3
-      with:
-        jvm: temurin:17
+    - uses: VirtusLab/scala-cli-setup@v0.1
     - name: Publish
       run: ./scala-cli publish . --cross
       env:
