--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         fetch-depth: 0
     - uses: coursier/cache-action@v6.4
     - uses: VirtusLab/scala-cli-setup@v1.0
+      with:
+        power: true
     - name: Test
       run: ./scala-cli test . --cross
 
@@ -29,6 +31,8 @@ jobs:
         fetch-depth: 0
     - uses: coursier/cache-action@v6.4
     - uses: VirtusLab/scala-cli-setup@v1.0
+      with:
+        power: true
     - name: Publish
       run: ./scala-cli publish . --cross
       env:
